rust/src/bindings.rs

extern "C" { pub fn bitns1unpack128v32 (in_ : * mut :: std :: os :: raw :: c_uchar , n : usize , out : * mut u32) -> usize ; }
extern "C" { pub fn bitpack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzpack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzpack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzpack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzpack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack8 (in_ : * mut u8 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u8 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack16 (in_ : * mut u16 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u16 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack32 (in_ : * mut u32 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u32 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * const :: std :: os :: raw :: c_uchar , start : u64 , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzpack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack128v16 (in_ : * mut :: std :: os :: raw :: c_ushort , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_ushort , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitzpack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitxpack128v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack128v64 (in_ : * mut u64 , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitpack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitdpack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitd1pack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitfpack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
extern "C" { pub fn bitf1pack256v32 (in_ : * mut :: std :: os :: raw :: c_uint , n : :: std :: os :: raw :: c_uint , out : * mut :: std :: os :: raw :: c_uchar , start : :: std :: os :: raw :: c_uint , b : :: std :: os :: raw :: c_uint) -> * mut :: std :: os :: raw :: c_uchar ; }
